--- a/about.html
+++ b/about.html
@@ -21,91 +21,49 @@
 <body>
 
 <div class="page-wrapper">
-    <!-- Preloader -->
-    <div class="preloader"><div class="icon"></div></div>
-
-    <!-- Main Header -->
-    <header class="main-header">
+    <!-- Header Style Two -->
+    <header class="main-header header-style-two">
         <!-- Header Top -->
         <div class="header-top">
             <div class="auto-container clearfix">
-
-                <div class="top-left clearfix">
-                    <ul class="info-list">
-                        <li>Welcome to best online gaming theme</li>
-                    </ul>
-                </div>
-
                 <div class="top-right">
                     <ul class="social-icons">
-                        <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
-						<li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
-                        <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+						<li><a href="https://facebook.com/arfteam.official"><span class="fab fa-facebook-square"></span></a></li>
+                        <li><a href="https://twitter.com/arfteam_esports"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://www.instagram.com/arf.team/"><span class="fab fa-instagram"></span></a></li>
+						<li><a href="https://youtube.com/channel/UC0v2Wr2SPBy5tdWeoAe8_xQ"><span class="fab fa-youtube"></span></a></li>
+						<li><a href="https://discord.com/invite/56MJ578WpS"><span class="fab fa-discord"></span></a></li>
+						<li><a href="https://www.tiktok.com/@arfteamcreatif"><span class="fab fa-tiktok"></span></a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <!-- Header Upper -->
-        <div class="header-upper">
-            <div class="inner-container">
-                <div class="auto-container clearfix">
-                    <!--Logo-->
+        <!-- Header Lower -->
+        <div class="header-lower">
+			<div class="auto-container">
+                <div class="clearfix">
+                    <!--Info-->
                     <div class="logo-outer">
-                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title="Gamon - Digital Gaming and Esports HTML Template"></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     <!--Nav Box-->
                     <div class="nav-outer clearfix">
                         <!--Mobile Navigation Toggler-->
                         <div class="mobile-nav-toggler"><span class="icon flaticon-menu-1"></span></div>
-
-                        <!-- Main Menu -->
-                        <nav class="main-menu navbar-expand-md navbar-light">
-                            <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
-                                <ul class="navigation clearfix pull-left">
-                                    <li class="dropdown"><a href="index.html">Home</a>
-                                        <ul>
-                                            <li><a href="index.html">Home page 01</a></li>
-                                            <li><a href="index-2.html">Home page 02</a></li>
-                                            <li class="dropdown"><a href="index.html">Header Styles</a>
-                                                <ul>
-                                                    <li><a href="index.html">Header Style One</a></li>
-                                                    <li><a href="index-2.html">Header Style Two</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-									<li class="current dropdown"><a href="about-clan.html">Pages</a>
-                                        <ul>
-                                            <li><a href="about-clan.html">About Clan</a></li>
-                                            <li><a href="about-me.html">About Me</a></li>
-											<li><a href="players.html">Players</a></li>
-											<li><a href="faq.html">Faq's</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                </ul>
-
-                                <ul class="navigation pull-right clearfix">
-                                    <li class="dropdown"><a href="matches.html">Matches</a>
-                                        <ul>
-                                            <li><a href="matches.html">Matches</a></li>
-                                            <li><a href="matches-single.html">Matches Single</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown"><a href="blog.html">Blog</a>
-                                        <ul>
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog-single.html">Blog Single</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contacts</a></li>
+						<nav class="main-menu navbar-expand-md navbar-light">
+                            <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
+                                <ul class="navigation clearfix">
+                                    <li><a href="about.html">About</a></li>
+									<li><a href="divisions.html">Divisions</a></li>
+									<li><a href="partners.html">Partners</a></li>
+									<!-- <li><a href="news.html">News</a></li> -->
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="#">Shop</a></li>
                                 </ul>
                             </div>
-                        </nav>
-                        <!-- Main Menu End-->
+                        </nav><!-- Main Menu End-->
                     </div>
                 </div>
             </div>
@@ -133,18 +91,18 @@
         <div class="mobile-menu">
             <div class="menu-backdrop"></div>
             <div class="close-btn"><span class="icon flaticon-close"></span></div>
-            
             <nav class="menu-box">
                 <div class="nav-logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
 				<!--Social Links-->
 				<div class="social-links">
 					<ul class="clearfix">
-						<li><a href="#"><span class="fab fa-twitter"></span></a></li>
-						<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
-						<li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
-						<li><a href="#"><span class="fab fa-instagram"></span></a></li>
-						<li><a href="#"><span class="fab fa-youtube"></span></a></li>
+						<li><a href="https://facebook.com/arfteam.official"><span class="fab fa-facebook-square"></span></a></li>
+                        <li><a href="https://twitter.com/arfteam_esports"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://www.instagram.com/arf.team/"><span class="fab fa-instagram"></span></a></li>
+						<li><a href="https://youtube.com/channel/UC0v2Wr2SPBy5tdWeoAe8_xQ"><span class="fab fa-youtube"></span></a></li>
+						<li><a href="https://discord.com/invite/56MJ578WpS"><span class="fab fa-discord"></span></a></li>
+						<li><a href="https://www.tiktok.com/@arfteamcreatif"><span class="fab fa-tiktok"></span></a></li>
 					</ul>
                 </div>
             </nav>
@@ -153,15 +111,14 @@
     <!-- End Main Header -->
 
 	<!--Page Title-->
-    <section class="page-banner" style="background-image:url(images/background/title-bg.jpg);">
+    <section class="page-banner" style="background-image:url(images/background/title-bg.png);">
         <div class="auto-container">
             <div class="inner-container clearfix">
                 <ul class="bread-crumb clearfix">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Pages</a></li>
-                    <li>About Me</li>
+                    <li>About Us</li>
                 </ul>
-                <h1>About Me</h1>
+                <h1>About Us</h1>
             </div>
         </div>
     </section>
@@ -170,12 +127,14 @@
 	<!-- Player Section -->
 	<section class="player-info-section">
 		<div class="auto-container">
+
+            <!-- Division PUBG-M -->
 			<div class="row clearfix">
             	<!--Text Column-->
                 <div class="text-column col-lg-6 col-md-6 col-sm-12">
                 	<div class="inner wow fadeInRight">
                     	<div class="title-box">
-                        	<div class="user-title">wolf smart</div>
+                        	<div class="user-title">PUBG MOBILE</div>
                             <div class="user-info">20 Games Played  .  40 Level Completed</div>
                         </div>
                         <div class="text">There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour, or simply free textinh randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</div>
@@ -190,7 +149,59 @@
                 <!--Image Column-->
                 <div class="image-column col-lg-6 col-md-6 col-sm-12">
                 	<div class="inner wow fadeInLeft">
-                    	<figure class="image"><img src="images/resource/about-4.jpg" alt=""></figure>
+                    	<figure class="image"><img src="images/resource/about-4.png" alt=""></figure>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Division Valorant -->
+            <div class="row clearfix">
+                <!--Image Column-->
+                <div class="image-column col-lg-6 col-md-6 col-sm-12">
+                	<div class="inner wow fadeInLeft">
+                    	<figure class="image"><img src="images/resource/about-4.png" alt=""></figure>
+                    </div>
+                </div>
+            	<!--Text Column-->
+                <div class="text-column col-lg-6 col-md-6 col-sm-12">
+                	<div class="inner wow fadeInRight">
+                    	<div class="title-box">
+                        	<div class="user-title">Valorant</div>
+                            <div class="user-info">20 Games Played  .  40 Level Completed</div>
+                        </div>
+                        <div class="text">There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour, or simply free textinh randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</div>
+                        <ul class="social-icons">
+							<li><a href="#"><span class="fab fa-twitter"></span></a></li>
+							<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
+							<li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
+							<li><a href="#"><span class="fab fa-instagram"></span></a></li>
+						</ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Division MLBB -->
+            <div class="row clearfix">
+            	<!--Text Column-->
+                <div class="text-column col-lg-6 col-md-6 col-sm-12">
+                	<div class="inner wow fadeInRight">
+                    	<div class="title-box">
+                        	<div class="user-title">Mobile Legends</div>
+                            <div class="user-info">20 Games Played  .  40 Level Completed</div>
+                        </div>
+                        <div class="text">There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour, or simply free textinh randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</div>
+                        <ul class="social-icons">
+							<li><a href="#"><span class="fab fa-twitter"></span></a></li>
+							<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
+							<li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
+							<li><a href="#"><span class="fab fa-instagram"></span></a></li>
+						</ul>
+                    </div>
+                </div>
+                <!--Image Column-->
+                <div class="image-column col-lg-6 col-md-6 col-sm-12">
+                	<div class="inner wow fadeInLeft">
+                    	<figure class="image"><img src="images/resource/about-4.png" alt=""></figure>
                     </div>
                 </div>
             </div>
@@ -202,7 +213,7 @@
     <section class="awards-section">
     	<div class="auto-container">
         	<div class="sec-title centered">
-                <div class="title">Check My All</div>
+                <div class="title">Check All Our</div>
                 <h2>achievements</h2>
             </div>
             <div class="awards-outer">
