--- a/pages/divisions.html
+++ b/pages/divisions.html
@@ -31,7 +31,7 @@
                 <div class="clearfix">
                     <!--Info-->
                     <div class="logo-outer">
-                        <div class="logo"><a href="../index.html"><img src="../images/logo.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="../index.html"><img src="../images/logo.png" alt="Logo ARF Team" title=""></a></div>
                     </div>
 
                     <!--Nav Box-->
@@ -66,7 +66,7 @@
             <div class="auto-container clearfix">
                 <!--Logo-->
                 <div class="logo pull-left">
-                    <a href="../index.html" title=""><img src="../images/logo.png" alt="" title=""></a>
+                    <a href="../index.html" title=""><img src="../images/logo.png" alt="logo ARF team" title=""></a>
                 </div>
                 <!--Right Col-->
                 <div class="pull-right">
@@ -83,7 +83,7 @@
             <div class="menu-backdrop"></div>
             <div class="close-btn"><span class="icon flaticon-close"></span></div>
             <nav class="menu-box">
-                <div class="nav-logo"><a href="../index.html"><img src="../images/logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="../index.html"><img src="../images/logo.png" alt="Logo ARF Team" title=""></a></div>
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
 				<!--Social Links-->
 				<div class="social-links">
@@ -126,14 +126,16 @@
                 <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0ms">
                     <div class="inner-box">
                         <figure class="image-box">
-                            <img src="../images/gallery/division-thumbnail-pubg.png" alt="">
+                            <img src="../images/gallery/division-thumbnail-pubg.png" alt="divisions-thumbnail-pubgm">
                             <!--Overlay Box-->
                             <div class="overlay-box">
                                 <div class="overlay-inner">
-                                    <div class="content">
-                                        <!-- <a href="#" class="link"><span class="icon flaticon-unlink"></span></a> -->
-                                        PUBG Team</a><br>
-                                        <a href="../images/gallery/division-thumbnail-pubg.png" data-fancybox="gallery-2" data-caption="" class="link"><span class="icon flaticon-add"></span></a>
+                                    <div class="content">                                        
+                                        <a href="divisions-pubgm.html" class="division-title-link"><h3 class="h3-division-title">PUBG Mobile</h3></a>
+                                        <a href="divisions-pubgm.html" class="link"><span class="icon">Players</span></a>
+                                        <!-- <a href="divisions-pubgm.html" class="link"><span class="icon">WOMEN</span></a> -->
+                                        <!-- <a href="#" class="link"><span class="icon flaticon-unlink"></span></a>
+                                        <a href="images/gallery/17.jpg" data-fancybox="gallery-2" data-caption="" class="link"><span class="icon flaticon-add"></span></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -145,13 +147,15 @@
                 <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="300ms">
                     <div class="inner-box">
                         <figure class="image-box">
-                            <img src="../images/gallery/division-thumbnail-valo.png" alt="">
+                            <img src="../images/gallery/division-thumbnail-valo.png" alt="division-thumbnail-valo">
                             <!--Overlay Box-->
                             <div class="overlay-box">
                                 <div class="overlay-inner">
                                     <div class="content">
-                                        <a href="#" class="link"><span class="icon flaticon-unlink"></span></a>
-                                        <a href="../images/gallery/division-thumbnail-valo.png" data-fancybox="gallery-2" data-caption="" class="link"><span class="icon flaticon-add"></span></a>
+                                        <h3 class="h3-division-title">Valorant</h3>
+                                        <a href="divisions-pubgm.html" class="link"><span class="icon">Players</span></a>
+                                        <!-- <a href="divisions-valorant.html" class="link"><span class="icon">MAN</span></a>
+                                        <a href="divisions-valorant.html" class="link"><span class="icon">WOMEN</span></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +182,7 @@
                     <div class="column col-lg-4 col-md-6 col-sm-12">
 						<div class="footer-widget logo-widget">
 							<div class="logo">
-                            	<a href="../index.html"><img src="../images/logo.png" alt="" /></a>
+                            	<a href="../index.html"><img src="../images/logo.png" alt="Logo ARF Team" /></a>
                             </div>
 							<div class="text">There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form by injected.</div>
 						</div>
