--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
 								<div class="row clearfix">
 									<div class="column col-lg-6 col-md-6 col-sm-12">
 										<ul class="list">
-											<li><a href="about.html">About</a></li>
-											<li><a href="#">Divisions</a></li>
-											<li><a href="#">Partners</a></li>
+											<li><a href="pages/about.html">About</a></li>
+											<li><a href="pages/divisions.html">Divisions</a></li>
+											<li><a href="pages/partners.html">Partners</a></li>
 										</ul>
 									</div>
 									<div class="column col-lg-6 col-md-6 col-sm-12">
