--- a/pages/about.html
+++ b/pages/about.html
@@ -281,8 +281,8 @@
 									<div class="column col-lg-6 col-md-6 col-sm-12">
 										<ul class="list">
 											<li><a href="about.html">About</a></li>
-											<li><a href="#">Divisions</a></li>
-											<li><a href="#">Partners</a></li>
+											<li><a href="divisions.html">Divisions</a></li>
+											<li><a href="partners.html">Partners</a></li>
 										</ul>
 									</div>
 									<div class="column col-lg-6 col-md-6 col-sm-12">
