added partners and contact page; trial picture at home, about, and players page

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,7 +51,7 @@
 									<li><a href="/pages/partners.html">Partners</a></li>
 									<!-- <li><a href="news.html">News</a></li> -->
 									<li><a href="/pages/contact.html">Contact</a></li>
-									<li><a href="#">Shop</a></li>
+									<!-- <li><a href="#">Shop</a></li> -->
                                 </ul>
                             </div>
                         </nav><!-- Main Menu End-->
@@ -130,12 +130,12 @@
                             <!-- <div class="user-info">20 Games Played  .  40 Level Completed</div> -->
                         </div>
                         <div class="text">There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour, or simply free textinh randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</div>
-                        <ul class="social-icons">
+                        <!-- <ul class="social-icons">
 							<li><a href="#"><span class="fab fa-twitter"></span></a></li>
 							<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
 							<li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
 							<li><a href="#"><span class="fab fa-instagram"></span></a></li>
-						</ul>
+						</ul> -->
                     </div>
                 </div>
 
@@ -172,9 +172,9 @@
 							<h3><a href="#">Muhammad Husein</a></h3>
 							<div class="level">Founder</div>
 							<ul class="social-icons">
-								<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
-								<li><a href="#"><span class="fab fa-twitter"></span></a></li>
-								<li><a href="#"><span class="fab fa-instagram"></span></a></li>
+								<li><a href="https://www.facebook.com/muhammad.husein.52687506"><span class="fab fa-facebook-square"></span></a></li>
+								<li><a href="https://twitter.com/mhmadhusein"><span class="fab fa-twitter"></span></a></li>
+								<li><a href="https://www.instagram.com/mhmadhusein/"><span class="fab fa-instagram"></span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -222,7 +222,7 @@
 	</section>
     <!-- End Management Section -->
 
-	<!--Awards Section-->
+	<!-- Achievement Section -->
     <section class="awards-section">
     	<div class="auto-container">
         	<div class="sec-title centered">
@@ -231,7 +231,7 @@
             </div>
             <div class="awards-outer">
 
-                <!--Awards Carousel-->
+                <!-- Achievement Carousel -->
                 <ul class="awards-carousel owl-carousel owl-theme">
                     <li class="slide-item"><figure class="image-box"><a href="#"><img src="../images/awards/1.png" alt=""></a></figure></li>
                     <li class="slide-item"><figure class="image-box"><a href="#"><img src="../images/awards/2.png" alt=""></a></figure></li>
@@ -244,13 +244,12 @@
                     <li class="slide-item"><figure class="image-box"><a href="#"><img src="../images/awards/4.png" alt=""></a></figure></li>
                     <li class="slide-item"><figure class="image-box"><a href="#"><img src="../images/awards/5.png" alt=""></a></figure></li>
                 </ul>
-                <!--End Awards Carousel-->
+                <!-- End Achievement Carousel -->
 
             </div>
         </div>
     </section>
-    <!--End Awards Section-->
-	
+    <!-- End Achievement Section -->
 	
 	<!-- Main Footer -->
     <footer class="main-footer">
@@ -288,7 +287,7 @@
 									<div class="column col-lg-6 col-md-6 col-sm-12">
 										<ul class="list">
 											<li><a href="#">Contact</a></li>
-											<li><a href="#">Shop</a></li>
+											<!-- <li><a href="#">Shop</a></li> -->
 										</ul>
 									</div>
 								</div>
