--- a/pages/divisions-pubgm.html
+++ b/pages/divisions-pubgm.html
@@ -50,7 +50,7 @@
 									<li><a href="/pages/partners.html">Partners</a></li>
 									<!-- <li><a href="news.html">News</a></li> -->
 									<li><a href="/pages/contact.html">Contact</a></li>
-									<li><a href="#">Shop</a></li>
+									<!-- <li><a href="#">Shop</a></li> -->
                                 </ul>
                             </div>
                         </nav><!-- Main Menu End-->
@@ -132,7 +132,7 @@
 				<div class="player-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="#"><img src="../images/resource/management-01.png" alt="" /></a>
+							<a href="#"><img src="../images/resource/pubgm-player-leondz.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="#">LEONDZ</a></h3>
@@ -150,7 +150,7 @@
 				<div class="player-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="#"><img src="../images/resource/management-01.png" alt="" /></a>
+							<a href="#"><img src="../images/resource/pubgm-player-constanta.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="#">CONSTANTA</a></h3>
@@ -168,7 +168,7 @@
 				<div class="player-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="#"><img src="../images/resource/management-01.png" alt="" /></a>
+							<a href="#"><img src="../images/resource/pubgm-player-morbid.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="#">MORBID</a></h3>
@@ -186,7 +186,7 @@
 				<div class="player-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="#"><img src="../images/resource/management-01.png" alt="" /></a>
+							<a href="#"><img src="../images/resource/pubgm-player-maul.png" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<h3><a href="#">MAUL</a></h3>
@@ -361,7 +361,7 @@
 									<div class="column col-lg-6 col-md-6 col-sm-12">
 										<ul class="list">
 											<li><a href="#">Contact</a></li>
-											<li><a href="#">Shop</a></li>
+											<!-- <li><a href="#">Shop</a></li> -->
 										</ul>
 									</div>
 								</div>
