--- a/pages/divisions-valorant.html
+++ b/pages/divisions-valorant.html
@@ -50,7 +50,7 @@
 									<li><a href="/pages/partners.html">Partners</a></li>
 									<!-- <li><a href="news.html">News</a></li> -->
 									<li><a href="/pages/contact.html">Contact</a></li>
-									<li><a href="#">Shop</a></li>
+									<!-- <li><a href="#">Shop</a></li> -->
                                 </ul>
                             </div>
                         </nav><!-- Main Menu End-->
@@ -361,7 +361,7 @@
 									<div class="column col-lg-6 col-md-6 col-sm-12">
 										<ul class="list">
 											<li><a href="#">Contact</a></li>
-											<li><a href="#">Shop</a></li>
+											<!-- <li><a href="#">Shop</a></li> -->
 										</ul>
 									</div>
 								</div>
