resize division thumbnail @ homepage & division page

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 			<div class="row clearfix">
 				
 				<!-- Division 1 -->
-				<div class="games-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
+				<div class="games-block home-col-lg-3 col-md-6 col-sm-12 col-aligncenter wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="/pages/divisions-pubgm.html"><img src="images/gallery/division-thumbnail-pubg.png" alt="pubg image" /></a>
+							<a href="/pages/divisions-pubgm.html"><img src="images/gallery/division-thumbnail-pubg-3.png" alt="pubg image" /></a>
 						</div>
 						<div class="lower-content">
 							<!-- <h3><a href="/pages/divisions-pubgm.html">PUBG Mobile</a></h3> -->
@@ -187,10 +187,10 @@
 				</div>
 				
 				<!-- Division 2 -->
-				<div class="games-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
+				<div class="games-block home-col-lg-3 col-md-6 col-sm-12 wow col-aligncenter fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
 					<div class="inner-box hvr-bob">
 						<div class="image">
-							<a href="/pages/divisions-valorant.html"><img src="images/gallery/division-thumbnail-valo.png" alt="valorant image" /></a>
+							<a href="/pages/divisions-valorant.html"><img src="images/gallery/division-thumbnail-valo-3.png" alt="valorant image" /></a>
 						</div>
 						<div class="lower-content">
 							<!-- <h3><a href="/pages/divisions-valorant.html">Valorant</a></h3> -->
