--- a/pages/divisions.html
+++ b/pages/divisions.html
@@ -123,10 +123,10 @@
             <div class="row clearfix">
             
                 <!--Division PUBG-->
-                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0ms">
+                <div class="gallery-item home-col-lg-3 col-md-6 col-sm-12 wow col-aligncenter fadeInLeft" data-wow-delay="0ms">
                     <div class="inner-box">
                         <figure class="image-box">
-                            <img src="../images/gallery/division-thumbnail-pubg.png" alt="divisions-thumbnail-pubgm">
+                            <img src="../images/gallery/division-thumbnail-pubg-3.png" alt="divisions-thumbnail-pubgm">
                             <!--Overlay Box-->
                             <div class="overlay-box">
                                 <div class="overlay-inner">
@@ -144,10 +144,10 @@
                 </div>
                 
                 <!--Division Valorant-->
-                <div class="gallery-item col-lg-4 col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="300ms">
+                <div class="gallery-item home-col-lg-3 col-md-6 col-sm-12 wow col-aligncenter fadeInLeft" data-wow-delay="300ms">
                     <div class="inner-box">
                         <figure class="image-box">
-                            <img src="../images/gallery/division-thumbnail-valo.png" alt="division-thumbnail-valo">
+                            <img src="../images/gallery/division-thumbnail-valo-3.png" alt="division-thumbnail-valo">
                             <!--Overlay Box-->
                             <div class="overlay-box">
                                 <div class="overlay-inner">
